(env
 (dev
  (wasm_of_ocaml
   (enabled_if false))
  (flags
   (:standard -w +a-4-40-41-42-44-48-58-66-70))
  (env-vars
   (js-enabled true)))
 (using-effects
  (wasm_of_ocaml
   (enabled_if false))
  (js_of_ocaml
   (compilation_mode separate)
   (flags
    (:standard --enable effects))
   (build_runtime_flags
    (:standard --enable effects)))
  (env-vars
   (js-enabled true)))
 (wasm
  (binaries
   (tools/node_wrapper.sh as node))
  (js_of_ocaml
   (enabled_if false))
  (wasm_of_ocaml
   (compilation_mode separate))
  (env-vars
   (js-enabled false)))
 (wasm-effects
  (binaries
   (tools/node_wrapper.sh as node))
  (js_of_ocaml
   (enabled_if false))
  (wasm_of_ocaml
   (compilation_mode separate)
   (flags
    (:standard --enable effects)))
  (env-vars
   (js-enabled false)))
 (bench_no_debug
  (flags
   (:standard \ -g))
  (ocamlc_flags
   (:standard \ -g))
  (link_flags
   (:standard \ -g))
  (env-vars
   (js-enabled true)))
 (_
  (env-vars
   (js-enabled true))))

(rule
 (targets version.ml.in)
 (action
  (with-stdout-to
   %{targets}
   (run %{dep:tools/version/gen/gen.exe} %{dep:VERSION}
    %{dep:tools/version/GIT-VERSION}))))

(data_only_dirs _wikidoc doc-dev)
