opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-camlp4"
version: "dev"

build: [
  ["jbuilder" "build" "--only-packages" "js_of_ocaml-camlp4" "-j" jobs "@install"]
]

depends: [
  "jbuilder" {build}
  "camlp4" {>= "2.4.4"}
]
depopts: ["deriving"]
conflicts: [
  "deriving"     {< "0.6"}
]
available: [ ocaml-version >= "4.02.0" ]
