opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-compiler"
version: "dev"

build: [["jbuilder" "build" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build & >= "1.0+beta17"}
  "cmdliner"
  "cppo" {>= "1.1.0"}
]

depopts: [ "ocamlfind" "yojson" ]

conflicts: [
  "ocamlfind"   {< "1.5.1"}
  "js_of_ocaml" {< "3.0"}
]

available: [ ocaml-version >= "4.02.0" ]
