opam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-compiler"
version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.2"}
  "cmdliner"
  "cppo" {>= "1.1.0"}
  "yojson" # It's optional, but we want users to be able to use source-map without pain.
  "build_path_prefix_map"
]

depopts: [ "ocamlfind" ]

conflicts: [
  "ocamlfind"   {< "1.5.1"}
  "js_of_ocaml" {< "3.0"}
]

synopsis: "Compiler from OCaml bytecode to Javascript"
