opam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.github.io/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
synopsis:     "Compiler from OCaml bytecode to Javascript"
description: """
Js_of_ocaml is a compiler from OCaml bytecode to JavaScript.
It makes it possible to run pure OCaml programs in JavaScript
environment like browsers and Node.js
"""

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {>= "1.11.1"}
  "ppx_expect" {with-test & >= "v0.12.0"}
  "cmdliner"
  "ocaml-migrate-parsetree"
  "yojson" # It's optional, but we want users to be able to use source-map without pain.
]

depopts: [ "ocamlfind" ]

conflicts: [
  "ocamlfind"   {< "1.5.1"}
  "js_of_ocaml" {< "3.0"}
]
