opam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-lwt"
version: "dev"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.2"}
  "lwt" {>= "2.4.4"}
  "js_of_ocaml" {>= "3.2"}
  "js_of_ocaml-ppx"
]
depopts: [ "graphics" "lwt_log" ]

synopsis: "Compiler from OCaml bytecode to Javascript"
