opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-ocamlbuild"

build: [["jbuilder" "build" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build & >= "1.0+beta7"}
  "ocamlbuild"
]

available: [ ocaml-version >= "4.00.0" ]
