opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-ppx"
version: "dev"

build: [
  ["jbuilder" "build-package" "js_of_ocaml-ppx" "-j" jobs]
]

depends: [
  "jbuilder"
  "metaquot"
  "ppx_tools"
]

available: [ ocaml-version >= "4.02.0" ]
