opam-version: "1.2"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

version: "dev"

build: [["jbuilder" "build" "-p" name "-j" jobs]]

depends: [
  "jbuilder" {build & >= "1.0+beta17"}
  "js_of_ocaml"
  "ppx_tools"
  "ppx_deriving"
]

conflicts: [
  "ppx_deriving"            {<="4.2.0"}
]

available: [ ocaml-version >= "4.02.0" ]
