opam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.github.io/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"
synopsis:     "Compiler from OCaml bytecode to Javascript"
description: """
Js_of_ocaml is a compiler from OCaml bytecode to JavaScript.
It makes it possible to run pure OCaml programs in JavaScript
environment like browsers and Node.js
"""

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {>= "1.11.1"}
  "js_of_ocaml" {= version}
  "ocaml-migrate-parsetree"
  "ppxlib" {>= "0.9.0"}
]
