opam-version: "2.0"
maintainer:   "dev@ocsigen.org"
authors:      "Ocsigen team"
bug-reports:  "https://github.com/ocsigen/js_of_ocaml/issues"
homepage:     "http://ocsigen.org/js_of_ocaml"
dev-repo:     "git+https://github.com/ocsigen/js_of_ocaml.git"

name: "js_of_ocaml-tyxml"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.02.0"}
  "dune" {build & >= "1.2"}
  "tyxml" {>= "4.3"}
  "reactiveData" {>= "0.2"}
  "js_of_ocaml" {>= "3.0"}
  "js_of_ocaml-ppx"
]
conflicts: [
  "js_of_ocaml"             {<"3.0"}
]

synopsis: "Compiler from OCaml bytecode to Javascript"
