(library
 (name js_of_ocaml)
 (public_name js_of_ocaml)
 (libraries uchar bytes)
 ;; (wrapped (transition "Will be removed past 2019-01-01"))
 (c_names js_of_ocaml_stubs)
 (preprocess (pps ppx_js_internal)))

(rule
 (targets js_of_ocaml_stubs.c.gen)
 (deps (glob_files *.ml))
 (action (with-stdout-to %{targets}
          (run ./gen_stubs/gen_stubs.exe %{deps}))))

(alias
 (name runtest)
 (action (diff js_of_ocaml_stubs.c js_of_ocaml_stubs.c.gen)))

(rule
 (targets lib_version.ml)
 (deps (:input-file ../version.ml.in))
 (action (copy %{input-file} %{targets})))
